# docs/swagger/libraryapi_swagger.json
@@ -129,11 +129,12 @@
                     {
                         "enum": [
                             "recent",
-                            "name"
+                            "name",
+                            "year"
                         ],
                         "type": "string",
                         "default": "recent",
-                        "description": "Sort order",
+                        "description": "Sort order; year needs type=movies or type=series",
                         "name": "sort",
                         "in": "query"
                     },
